-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.3.0-rc1
-
Windows 7 64 bit
Qt 5.3.2, Qt 5.4
- replaces
-
QTCREATORBUG-13675 Blurry fonts in Qt Creator dark theme
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-13447 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
100608,2 | Theming: Fix color of disabled menu items | 3.3 | qt-creator/qt-creator | Status: ABANDONED | -2 | 0 |
109134,4 | Theming: fix disabled menu items in dark theme | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |