src/libs/utils/theme/theme.h
@@ -98,6 +98,8 @@ public:
         MenuBarItemBackgroundColor,
         MenuBarItemTextColorDisabled,
         MenuBarItemTextColorNormal,
+        MenuItemTextColorDisabled,
+        MenuItemTextColorNormal,
         MiniProjectTargetSelectorBackgroundColor,
         MiniProjectTargetSelectorBorderColor,
         MiniProjectTargetSelectorSummaryBackgroundColor,
